--- a/珠峰大本营/7.正式课第七周/3.20180818第三天/2.http协议.html
+++ b/珠峰大本营/7.正式课第七周/3.20180818第三天/2.http协议.html
@@ -21,7 +21,7 @@
     // 【http 请求阶段】；
     // 1. 浏览器首先会把url发送给DNS服务器；解析出一个服务器的IP地址；
     // 2. DNS 服务器会根据IP找到对应的服务器，（服务器需要联网）
-    // 3.服务器接收到请求；客户端和服务器已经产生了连接；
+    // 3. 服务器接收到请求；客户端和服务器已经产生了连接；
 
     // 【http的响应阶段】
     // 4.服务器接收到请求后，会根据你的传过来的地址，路径，等找到相应的项目；
@@ -50,7 +50,7 @@
 
     // 四次挥手：
     // 1.当客户端把数据都发送给服务器，没有数据再传输给服务器，那么会发送一个FIN码
-    // 2.当服务器接收客户端数据完毕之后，告诉给客户端，给客户端发送AC码，你可以把数据通道关闭；
+    // 2.当服务器接收客户端数据完毕之后，告诉给客户端，给客户端发送ACK码，你可以把数据通道关闭；
     // 3. 当服务器发送完毕之后，也会发送FIN码，告诉浏览器，数据发送完毕
     // 4.当客户端接收完毕之后，同样发送ACK码，告诉服务器，数据接收完毕，你可以进行关闭；
 
