--- a/珠峰大本营/7.正式课第七周/4.20180819第四天/3.JSONP.html
+++ b/珠峰大本营/7.正式课第七周/4.20180819第四天/3.JSONP.html
@@ -14,7 +14,7 @@
 
     // 把一个JOSN文件部署到A服务器的6000端口下，那么A服务器的6001端口的ajax请求；不能访问6000端口下的数据；
     // ajax属于同源策略，在不做任务处理情况下，只能访问自己服务器下的数据；
-    // 浏览器属于非同源策略，可以访问任务服务器上数据的；
+    // 浏览器属于非同源策略，可以访问任何服务器上数据的；
    /* ajax({
         url:"http://matchweb.sports.qq.com/kbs/calendar?columnId=100000",
         type:"get",
